--- a/uncoder/index.html
+++ b/uncoder/index.html
@@ -68,12 +68,14 @@
 
       .output {
         margin-top: 20px;
+        position: relative;
       }
 
       .textarea {
         height: 200px;
         resize: vertical;
-        font-family: "Courier New", Courier, monospace; /* Monospace font for output */
+        font-family: "Courier New", Courier, monospace;
+        font-size: 14px;
       }
 
       .copy-btn {
