--- a/index.html
+++ b/index.html
@@ -1066,7 +1066,7 @@
            <div>
             <label class="block cursor-pointer relative">
              <span class="text-gray-600 font-medium text-xs absolute bg-white px-3 pt-1 ml-2 -mt-3">BIN</span>
-             <input placeholder="453590" name="bin" class="form-input block w-full" />
+             <input placeholder="410039xxxxxxxxxx" name="bin" class="form-input block w-full" />
             </label>
            </div>
            <div class="flex -mx-2 items-center">
